# local-django

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  django_local.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  issue_template.md
.github/workflows/: test.yml
local_django/: po_utils.py  settings.py  translate.py  translation_manager.py
local_django/management/commands/: translate_po.py
local_django/services/: aws_translate.py  azure_translate.py  helsinki.py
notebooks/: installation.ipynb
requirements/: all.txt  base.txt  dev.txt  test.txt
